syntax = "proto3";

package com.epam.grpc.intro.messages.example;

option java_package = "com.epam.grpc.intro.messages.example.proto";
option java_multiple_files = true;

message Request {
}

message Response {
}

service DemoService {
  rpc sendRequest(Request) returns (Response);
  rpc streamResponses(Request) returns (stream Response);
  rpc streamRequests(stream Request) returns (Response);
  rpc streamRequestsAndResponses(stream Request) returns (stream Response);
}